CLOSED FIXED41164
[Qt] QtWebKit crashes if <select>'s render changes in its onchange event
https://bugs.webkit.org/show_bug.cgi?id=41164
Summary [Qt] QtWebKit crashes if <select>'s render changes in its onchange event
Luiz Agostini
Reported 2010-06-24 09:33:16 PDT
http://www.mav-start.hu/english/index.php is the online hungarian railway guide. If you choose an option from "Reduction" drop-down list the browser will crash.
Attachments
patch 1 (1.92 KB, patch)
2010-06-24 09:41 PDT, Luiz Agostini
commit-queue: commit-queue-
Luiz Agostini
Comment 1 2010-06-24 09:41:11 PDT
Created attachment 59665 [details] patch 1
Kenneth Rohde Christiansen
Comment 2 2010-06-24 09:56:31 PDT
Comment on attachment 59665 [details] patch 1 WebKit/qt/ChangeLog:8 + QtWebKit crashes if <select>'s renderer changes in its onchange event. you are repeating yourself. Why not explain how you fixed it instead
WebKit Commit Bot
Comment 3 2010-06-25 19:59:48 PDT
Comment on attachment 59665 [details] patch 1 Clearing flags on attachment: 59665 Committed r61935: <http://trac.webkit.org/changeset/61935>
WebKit Commit Bot
Comment 4 2010-06-25 20:10:44 PDT
Comment on attachment 59665 [details] patch 1 Rejecting patch 59665 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file WebKit/qt/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebKit/qt/WebCoreSupport/QtFallbackWebPopup.cpp Hunk #1 FAILED at 97. 1 out of 1 hunk FAILED -- saving rejects to file WebKit/qt/WebCoreSupport/QtFallbackWebPopup.cpp.rej Full output: http://webkit-commit-queue.appspot.com/results/3313735
Luiz Agostini
Comment 5 2010-06-28 06:48:46 PDT
landed.
Simon Hausmann
Comment 6 2010-07-01 01:28:27 PDT
cherry-picked revision 61935 into qtwebkit-2.0 with commit de98c5e02992ca8400065a0cb3eb8ff3f6e36b79
Note You need to log in before you can comment on or make changes to this bug.