2010-06-25  Luiz Agostini  <luiz.agostini@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtWebKit crashes if <select>'s render changes in its onchange event
        https://bugs.webkit.org/show_bug.cgi?id=41164

        QtWebKit crashes if <select>'s renderer changes in its onchange event.

        * WebCoreSupport/QtFallbackWebPopup.cpp:
        (WebCore::QtFallbackWebPopup::~QtFallbackWebPopup):

Canonical link: https://commits.webkit.org/52915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61935 268f45cc-cd09-0410-ab3c-d52691b4dbfc